# Diplom

./: .gitignore  CMakeLists.txt  show_mesh.py
google_api/: download_heights.py
nasa_api/: download.py  main.py  res_to_height_table.py
nasa_api/nasa_api/: __init__.py  download.py  find_products.py  nasa_token.py  sphere.py
program/: local_main.cpp  main.cpp  pic_main.cpp
program/config/: config.h  config.h.in
program/headers/: base_mesh.h  bz_curve.h  compose_function.h  csv_parser.h  geometry2d.h  height_table.h  line.h  mesh.h  part_of_function.h  plane.h  polygon.h  roket_ode.h  rotate.h  trans_matrix.h
program/sources/: bz_curve.cpp  compose_function.cpp  csv_parser.cpp  face_mesh.cpp  geometry2d.cpp  height_table.cpp  line.cpp  mesh.cpp  metrics.cpp  part_of_function.cpp  plane.cpp  point.cpp  polygon.cpp  roket_ode.cpp  rotate.cpp  sphere.cpp  trans_matrix.cpp  vertex_mesh.cpp  winged_mesh.cpp
program/tests/: polygon_test.cpp
scripts/: make_slads.py
